[package]
name = "zoea"
license = "Apache-2.0"
version = "0.0.1"
authors = ["Fabio Mencoboni <Fabio.Mencoboni@gmail.com>"]
edition = "2018"
description = "zoea is the worst rust package you will ever outgrow. It is intended for pythonistas and part-time programmers to have some useful 'shortcuts' to get up and running quickly."

include = [ "Cargo.toml", "README.md", "src/*.rs" ]

repository = "https://github.com/FabioMencoboni/zoea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.0.0"
curl = "0.4.29"
rust-stemmers = "1.2.0"
