[package]
name = "zoea"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Fabio Mencoboni <Fabio.Mencoboni@gmail.com>"]
edition = "2018"
description = "Zoea is a crate by and for baby Rustaceans. It contains 'easy' buttons for common things like http get requests, key-value database persistence, and Natural Language Processing."
readme = "README.md"
include = [ "Cargo.toml", "README.md", "src/*.rs" ]

repository = "https://github.com/FabioMencoboni/zoea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.0.0"
#curl = "0.4.29"
ureq = "2.1.1"
rust-stemmers = "1.2.0"
porter-stemmer = "0.1.2"
sqlite = "0.25.0"
nalgebra = "0.21.0"
rand = "0.7.3"
